kubernetes/projects/home-automation/apps/ups-monitoring/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ups-monitoring
  namespace: ups
  labels:
    app.kubernetes.io/name: ups-monitoring
    app.kubernetes.io/part-of: home-automation
spec:
  type: ClusterIP
  trafficDistribution: PreferSameNode
  selector:
    app.kubernetes.io/name: ups-monitoring
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: nut
      port: 3493
      targetPort: nut
      protocol: TCP
    - name: metrics
      port: 9199
      targetPort: metrics
      protocol: TCP
